--- a/gulp-starter-main/src/index.html
+++ b/gulp-starter-main/src/index.html
@@ -1,10 +1,105 @@
 <html>
 	<head>
-		<title>Gulp Starter Pack</title>
-		<link href="/assets/css/main.css" rel="stylesheet" >
+	<title>Portfolio - Harris Steven</title>
+
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="icon" type="image/png" href="assets/images/logo_onglet.png">
+	<link href="assets/css/main.css" rel="stylesheet">
+
+	<!-- Link type -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
+
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@publisher_handle">
+	<meta name="twitter:creator" content="@author_handle">
+	<meta name="twitter:title" content="Travail de fin d'année de Steven Harris">
+	<meta name="twitter:description" content="Page produit de l'application Lilink.">
+	<!-- Twitter summary card with large image must be at least 280x150px -->
+	<meta name="twitter:image" content="http://steven-harris.be/projets/tfa/assets/images/logoshare.png">
+
+	<!-- Open Graph data -->
+	<meta property="og:site_name" content="Travail de fin d'année" />
+	<meta property="og:title" content="Travail de fin d'année" />
+	<meta property="og:description"
+		content="Site réaliser par Steven Harris dans la cadre de son travail de fin d'année. Option DWM à l'HEAJ." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://steven-harris.be/projets/tfa/index.html" />
+	<meta property="og:image" content="http://steven-harris.be/projets/tfa/assets/images/logoshare.png" />
+	<meta property="og:image:width" content="600">
+	<meta property="og:image:height" content="500">
+
+	<script defer src="assets/js/main.min.js"></script>
 	</head>
 	<body>
-		<h1>Gulp Starter Pack</h1>
-		<script src="/assets/js/main.min.js" ></script>
+		<header class="head">
+			<div class="head__block">
+				<h1 class="title__big">Steven Harris</h1>
+				<p class="head__para">Student in web design</p>
+				<ul class="head__soc">
+					<li class="head__socEl"><a class="head__socA" href="https://www.facebook.com/steven.harris.3363/"><img class="socLogo" src="./assets/images/facebook.svg" alt="Logo de Facebook"></a></li>
+					<li class="head__socEl"><a class="head__socA" href="https://twitter.com/Ryypin"><img class="socLogo" src="./assets/images/twitter.svg" alt="Logo de Twitter"></a></li>
+					<li class="head__socEl"><a class="head__socA" href="https://www.instagram.com/harris_webd/"><img class="socLogo" src="./assets/images/instagram.svg" alt="Logo d'Instagram"></a></li>
+				</ul>
+			</div>
+		</header>
+		<main class="main">
+			<h1 class="title__big title__big--black">Portfolio</h1>
+			<div class="card__main">
+			<a href="http://steven-harris.be/projets/tfa/">
+				<div class="card">
+					<img class="card__img" src="./assets/images/lilink.png" srcset="./assets/images/lilink@2x.png 2x" alt="Logo du site Lilink.">
+					<div class="card__text">
+						<h2 class="title__card">TFA - Lilink</h2>
+						<p class="card__p">Mai 2021 - Travail de fin d'année</p>
+					</div>
+				</div>
+			</a>
+			<a href="http://lennysgarden.be/"> 
+				<div class="card">
+					<img class="card__img" src="./assets/images/lennys.png" srcset="./assets/images/lennys@2x.png 2x" alt="Logo du site Lenny's Garden.">
+					<div class="card__text">
+						<h2 class="title__card">Lenny's Garden</h2>
+						<p class="card__p">Mai 2021 - Atelier Dataplay</p>
+					</div>
+				</div>
+			</a>
+			<a href="http://steven-harris.be/projets/rethinking-ux/">
+				<div class="card">
+					<img class="card__img" src="./assets/images/rux.png" srcset="./assets/images/rux@2x.png 2x" alt="Logo du site Rethinking-UX.">
+					<div class="card__text">
+						<h2 class="title__card">Rethinking UX</h2>
+						<p class="card__p">Février 2021 - Atelier RUX</p>
+					</div>
+				</div>
+			</a>
+			<a href="http://steven-harris.be/projets/iolce/">
+				<div class="card">
+					<img class="card__img" src="./assets/images/iolce.png" srcset="./assets/images/iolce@2x.png 2x" alt="Logo du site IOLCE.">
+					<div class="card__text">
+						<h2 class="title__card">IOLCE</h2>
+						<p class="card__p">Décembre 2020 - Atelier IOLCE</p>
+					</div>
+				</div>
+			</a>
+			<a href="http://steven-harris.be/projets/helloworld/">
+				<div class="card">
+					<img class="card__img" src="./assets/images/helloworld.png" srcset="./assets/images/helloworld@2x.png 2x" alt="Logo du site helloworld.">
+					<div class="card__text">
+						<h2 class="title__card">Helloworld</h2>
+						<p class="card__p">Octobre 2020 - Atelier Helloworld</p>
+					</div>
+				</div>
+			</a>
+			</div>			
+		</main>
 	</body>
 </html>
