--- a/gulp-starter-main/src/index.html
+++ b/gulp-starter-main/src/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 	<head>
 	<title>Portfolio - Harris Steven</title>
 
@@ -6,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="icon" type="image/png" href="assets/images/logo_onglet.png">
+	<link rel="icon" type="image/png" href="assets/images/logo_SH.png">
 	<link href="assets/css/main.css" rel="stylesheet">
 
 	<!-- Link type -->
@@ -21,19 +22,19 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@publisher_handle">
 	<meta name="twitter:creator" content="@author_handle">
-	<meta name="twitter:title" content="Travail de fin d'année de Steven Harris">
-	<meta name="twitter:description" content="Page produit de l'application Lilink.">
+	<meta name="twitter:title" content="Portfolio - Steven Harris">
+	<meta name="twitter:description" content="Portfolio des différents travaux réalisé en 2ème en option Web Design à l'HEAJ.">
 	<!-- Twitter summary card with large image must be at least 280x150px -->
-	<meta name="twitter:image" content="http://steven-harris.be/projets/tfa/assets/images/logoshare.png">
+	<meta name="twitter:image" content="http://steven-harris.be/assets/images/IMAGE_SHARE.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:site_name" content="Travail de fin d'année" />
-	<meta property="og:title" content="Travail de fin d'année" />
+	<meta property="og:site_name" content="Portfolio - Steven Harris" />
+	<meta property="og:title" content="Portfolio - Steven Harris" />
 	<meta property="og:description"
-		content="Site réaliser par Steven Harris dans la cadre de son travail de fin d'année. Option DWM à l'HEAJ." />
+		content="Portfolio des différents travaux réalisé en 2ème en option Web Design à l'HEAJ." />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://steven-harris.be/projets/tfa/index.html" />
-	<meta property="og:image" content="http://steven-harris.be/projets/tfa/assets/images/logoshare.png" />
+	<meta property="og:url" content="http://steven-harris.be/index.html" />
+	<meta property="og:image" content="http://steven-harris.be/assets/images/IMAGE_SHARE.png" />
 	<meta property="og:image:width" content="600">
 	<meta property="og:image:height" content="500">
 
